tried to fix floating pics uneven

--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a:focus {
 }
 
 .third-content {
-	padding-bottom: 60px;
+	padding-bottom: 100px;
 }
 
 .callout {
@@ -129,8 +129,8 @@ a:focus {
 }
 
 .main-footer {
-  padding-top: 60px;
-  padding-bottom: 100px;
+  padding-top: 10px;
+  padding-bottom: 150px;
   background: linear-gradient(white, transparent 80%), url('pics/coffee-plus-laptop.png') no-repeat center;
   background-size: cover;
 }
